# bazel-aquery-differ

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  go_repositories.bzl  proto_repositories.bzl  repositories.bzl  rules_proto_config.yaml
.github/workflows/: ci.yaml  release.yaml
cmd/aquerydiff/: BUILD.bazel  action.go  action_graph.go  action_output_map.go  action_output_pair.go  artifact_path_map.go  config.go  dep_set_of_files_map.go  dep_set_resolver.go  main.go  path_fragment_resolver.go  platforms.bzl  target_map.go
cmd/aquerydiff/testdata/baseline/: README.md  expectedStderr.txt
cmd/aquerydiff/testdata/example/: AddJarManifestEntry.after.pb  AddJarManifestEntry.before.pb  README.md  arguments.txt  expectedStderr.txt
pkg/action/: BUILD.bazel  action.go  graph.go  output_map.go  output_pair.go  output_pair_test.go
pkg/artifact/: BUILD.bazel  path_map.go  path_map_test.go
pkg/depset/: BUILD.bazel  map.go  resolver.go  resolver_test.go
pkg/generationtest/: BUILD.bazel  generation_test.go  generationtest.bzl
pkg/pathfragment/: BUILD.bazel  resolver.go  resolver_test.go
pkg/protobuf/: BUILD.bazel  io.go
pkg/report/: BUILD.bazel  assets.go  files.go  html.go  html_test.go  index.html.tmpl  style.css
pkg/testtools/: BUILD.bazel  files.go
