load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "aquerydiff_lib",
    srcs = [
        "action.go",
        "action_graph.go",
        "action_output_map.go",
        "action_output_pair.go",
        "artifact_path_map.go",
        "config.go",
        "dep_set_of_files_map.go",
        "dep_set_resolver.go",
        "main.go",
        "path_fragment_resolver.go",
        "target_map.go",
    ],
    importpath = "github.com/stackb/bazel-aquery-differ/cmd/aquerydiff",
    visibility = ["//visibility:private"],
    deps = [
        "//build/stack/bazel/aquery/differ:differ_go_proto",
        "//pkg/protobuf",
        "@bazelapis//src/main/protobuf:analysis_v2_go_proto",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_pmezard_go_difflib//difflib",
    ],
)

go_binary(
    name = "aquerydiff",
    embed = [":aquerydiff_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "aquerydiff_darwin_amd64",
    embed = [":aquerydiff_lib"],
    gc_linkopts = [
        "-s",
        "-w",
    ],
    goarch = "amd64",
    goos = "darwin",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "aquerydiff_darwin_arm64",
    embed = [":aquerydiff_lib"],
    gc_linkopts = [
        "-s",
        "-w",
    ],
    goarch = "arm64",
    goos = "darwin",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "aquerydiff_linux_amd64",
    embed = [":aquerydiff_lib"],
    gc_linkopts = [
        "-s",
        "-w",
    ],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "aquerydiff_linux_arm64",
    embed = [":aquerydiff_lib"],
    gc_linkopts = [
        "-s",
        "-w",
    ],
    goarch = "arm64",
    goos = "linux",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "aquerydiff_windows_amd64",
    embed = [":aquerydiff_lib"],
    goarch = "amd64",
    goos = "windows",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)
