load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "action",
    srcs = [
        "action.go",
        "graph.go",
        "output_map.go",
        "output_pair.go",
    ],
    importpath = "github.com/stackb/bazel-aquery-differ/pkg/action",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/bazel/aquery/differ:differ_go_proto",
        "//pkg/artifact",
        "//pkg/depset",
        "//pkg/target",
        "@bazelapis//src/main/protobuf:analysis_v2_go_proto",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_pmezard_go_difflib//difflib",
    ],
)

go_test(
    name = "action_test",
    srcs = ["output_pair_test.go"],
    embed = [":action"],
    deps = ["//build/stack/bazel/aquery/differ:differ_go_proto"],
)
