load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "depset",
    srcs = [
        "map.go",
        "resolver.go",
    ],
    importpath = "github.com/stackb/bazel-aquery-differ/pkg/depset",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/artifact",
        "@bazelapis//src/main/protobuf:analysis_v2_go_proto",
    ],
)

go_test(
    name = "depset_test",
    srcs = ["resolver_test.go"],
    embed = [":depset"],
    deps = [
        "//pkg/artifact",
        "@bazelapis//src/main/protobuf:analysis_v2_go_proto",
        "@com_github_google_go_cmp//cmp",
    ],
)
