load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "protobuf",
    srcs = ["io.go"],
    importpath = "github.com/stackb/bazel-aquery-differ/pkg/protobuf",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
    ],
)
