load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "report",
    srcs = [
        "assets.go",
        "files.go",
        "html.go",
    ],
    embedsrcs = [
        "index.html.tmpl",
        "style.css",
    ],
    importpath = "github.com/stackb/bazel-aquery-differ/pkg/report",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/bazel/aquery/differ:differ_go_proto",
        "//pkg/action",
        "//pkg/protobuf",
    ],
)

go_test(
    name = "report_test",
    srcs = ["html_test.go"],
    embed = [":report"],
)
